istio-teaching/destinationrules/trafficPolicy/dr-details-connectionPool-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details
spec:
  host: details
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s
          probes: 10
      http:
        http2MaxRequests: 100
        maxRequestsPerConnection: 10
        http1MaxPendingRequests: 1
        maxRetries: 1
        idleTimeout: 10s
        h2UpgradePolicy: DEFAULT
