istio-teaching/destinationrules/trafficPolicy/dr-ingressgateway-h2UpgradePolicy-UPGRADE.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ingressgateway
  namespace: istio-system
spec:
  host: istio-ingressgateway
  trafficPolicy:
    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE
