istio-teaching/destinationrules/trafficPolicy/dr-productpage-connectionPool-http-h2Upgrade-UPGRADE.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s
          probes: 10
      http:
        http2MaxRequests: 10
        maxRequestsPerConnection: 1
        http1MaxPendingRequests: 1
        maxRetries: 1
        idleTimeout: 10s
        h2UpgradePolicy: UPGRADE
